infra/k8s/solis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solis-service
spec:
  selector:
    app: solis
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9100
  type: ClusterIP
